--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -9,29 +9,18 @@
   justify-content: center;
 }
 
-/* Remove top padding from home banner */
-main {
-  padding-top: 0 !important;
-}
-
-/* Home content */
-.contentSection {
-  width: 100%;
-  padding: 2rem;
-  transition: 0.3s ease-in;
-}
-
-.contentWrapper {
+.infoSection {
   gap: 2rem;
   display: grid;
   margin: 0 auto;
   align-items: center;
+  margin-bottom: 2rem;
   justify-content: center;
   transition: 0.3s ease-in;
   grid-template-columns: 1fr 1fr;
 }
 
-/* Text content */
+/* Text */
 .textContent {
   text-align: left;
   align-self: flex-start;
@@ -86,7 +75,8 @@ main {
 /* Information banner */
 .informationBanner {
   width: 100vw;
-  padding: 1.5rem;
+  padding: 2rem;
+  margin-bottom: 2rem;
   transition: 0.3s ease-in;
   background-color: var(--primary);
   box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.3);
@@ -143,11 +133,7 @@ main {
 
 /* Tablet responsiveness */
 @media (max-width: 768px) {
-  .contentSection {
-    padding: 1.75rem;
-  }
-
-  .contentWrapper {
+  .infoSection {
     gap: 1.75rem;
     grid-template-columns: 1fr;
   }
@@ -161,7 +147,7 @@ main {
   }
 
   .informationBanner {
-    padding: 1rem;
+    padding: 1.75rem;
   }
 
   .infoItem i {
@@ -179,11 +165,7 @@ main {
 
 /* Mobile responsiveness */
 @media (max-width: 480px) {
-  .contentSection {
-    padding: 1.5rem;
-  }
-
-  .contentWrapper {
+  .infoSection {
     gap: 1.5rem;
   }
 
