--- a/src/pages/TermsOfService/TermsOfService.module.css
+++ b/src/pages/TermsOfService/TermsOfService.module.css
@@ -2,8 +2,7 @@
   width: 100%;
   display: flex;
   margin: 0 auto;
-  max-width: 1200px;
-  padding-top: 2rem;
+  max-width: 1000px;
   align-items: center;
   flex-direction: column;
   justify-content: center;
@@ -11,7 +10,7 @@
 
 /* Heading */
 .heading {
-  font-size: 2.75rem;
+  font-size: 2.5rem;
   margin-bottom: 1rem;
   padding: 0.25rem 1rem;
   border-radius: 0.25rem;
@@ -29,14 +28,14 @@
 
 /* Introduction */
 .introduction {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
   text-align: center;
   margin-bottom: 0.75rem;
 }
 
 .termsHeading {
   font-weight: 500;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
   padding: 0.25rem 1rem;
   display: inline-block;
   margin-bottom: 0.5rem;
@@ -49,7 +48,7 @@
 }
 
 .termsText {
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 .termsText:not(:last-child) {
@@ -58,46 +57,38 @@
 
 /* Tablet responsiveness */
 @media (max-width: 768px) {
-  .termsOfServiceContainer {
-    padding-top: 1.75rem;
-  }
-
   .heading {
     font-size: 2rem;
   }
 
   .introduction {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
   }
 
   .termsHeading {
-    font-size: 1.35rem;
+    font-size: 1.25rem;
   }
 
   .termsText {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
   }
 }
 
 /* Mobile responsiveness */
 @media (max-width: 480px) {
-  .termsOfServiceContainer {
-    padding-top: 1.5rem;
-  }
-
   .heading {
     font-size: 1.75rem;
   }
 
   .introduction {
-    font-size: 1.15rem;
+    font-size: 1rem;
   }
 
   .termsHeading {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
   }
 
   .termsText {
-    font-size: 1.15rem;
+    font-size: 1rem;
   }
 }
